--- a/templates/auth/registation.html
+++ b/templates/auth/registation.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'home/base/base.html' %}
 {% load static %}
 {% block title %}SignUp{% endblock title %}
 {% block css %}
@@ -189,63 +189,34 @@
   
 {% endfor %}
 
-<div class="wrapper">
-	<div class="header">
-		<div class="top">
-			<div class="logo">
-        <h2 style="margin-left : 30px;margin-bottom : 21px;">βＬӨGVΣЯƧΣ</h2>
-			</div>
-
-      <form action="" method="POST" novalidate>
-			{% csrf_token %}
-        <div class="form">
-       
-          {% for field in form %}
-          <div class="input_field">
-            
-            {{ field }}
-          </div>
-            {% if field.errors %}
-              <p class="error text-danger">{{ field.errors.as_text }}</p>
-            {% endif %}
-            <br>
-          {% endfor %}
-
-          {% if form.non_field_errors %}
-            <div class="alert alert-danger" role="alert">
-              {% for error in form.non_field_errors %}
-                <p>{{ error }}</p>
-              {% endfor %}
-            </div>
-          {% endif %}
-
-          <div >
-            <button class="btn" type="submit">Sign Up</button>
-          </div>
-
-			  </div>
-
-      </form>
-
-			<div class="or">
-				<div class="line"></div>
-				<p>OR</p>
-				<div class="line"></div>
-			</div>
-			<div class="dif">
-				<div class="ggl">
-					<img src="{% static 'image/gg.jpg' %}" alt="google">
-					<p>Sign Up with Google</p>
-				</div>
-			</div>
-		</div>
-		<div class="signup">
-			<p>Member here ? <a href="{% url 'the_login' %}">SignIn</a></p>
-		</div>
-		
-	</div>
-
+<div class="container">
+  <div class="box">
+    <div class="header">
+      <p>Register to BlogVerse</p>
+    </div>
+    <form method="POST" novalidate>
+      {% csrf_token %}
+      <div class="input-box">
+        {% for row in form %}
+        {% if row.errors %}
+        {% for error in row.errors %}
+        <p style="color:red;">{{error}}</p>
+        {% endfor %}
+        {% endif %}
+          {{ row }}
+        {% endfor %}
+      </div>
+      <div class="input-box">
+        <input type="submit" class="input-submit" value="SIGN UP">
+      </div>
+    </form>
+    
+  </div>
+  <div class="wrapper"></div>
 </div>
+
+
+
 {% endblock content %}
 
 
