--- a/templates/home/artical.html
+++ b/templates/home/artical.html
@@ -6,8 +6,69 @@
    <div class="blog_content">
       <h1 style="justify-content:center; color:navyblue;">{{content.title}}</h1>
       {{content.descript|safe}}
-      
-  </div>
+
+      <div class="columns">
+        <p class="title">Comments</p>
+        <div class="comment-section">
+
+
+            <h2>Recent Comments</h2>
+            <div class="comments-container">
+                {% for commenter in all_comment %}
+                <div class="comment"> <img class="comment-profile-pic" src="{{commenter.commenter_photo.url}}">
+                    <div class="comment-content">
+                        <p class="comment-author">{{commenter.commenter_name}}</p>
+                        <p class="comment-text">{{commenter.comment}}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+
+            <h2>Leave a Comment</h2>
+            <form  method="post" enctype="multipart/form-data" novalidate> 
+                {% csrf_token %}
+                <div class="comment-form-row">
+                    {% if form.commenter_name.errors %}
+                    {% for error in form.commenter_name.errors %}
+                    <p style="color:red;display: flex;float: left;">{{error}}</p>
+                    {% endfor %}
+                    {% endif %}
+                <label for="">Name</label>
+                {{form.commenter_name}}
+                
+                <label for="">Image</label>
+                {{form.commenter_photo}}
+              </div>
+              
+              <div class="comment-form-row">
+                {% if form.comment.errors %}
+                    {% for error in form.comment.errors %}
+                    <p style="color:red;">{{error}}</p>
+                    {% endfor %}
+                    {% endif %}
+                <label for="">Comment</label>
+                {{form.comment}}
+              </div>
+              <button 
+              style="
+                background-color: #4CAF50; /* Green color for submit button */
+                color: white;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.2s ease-in-out;" 
+                type="submit">Submit Comment
+            </button>
+            </form>
+            
+            
+          </div>
+          
+
+      </div>
+
+    </div>
 
    <div class="blog_content right_content">
    
