--- a/templates/home/base/base.html
+++ b/templates/home/base/base.html
@@ -18,6 +18,7 @@
     
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="{% static "css/nav.css" %}">
+    {% block css %}{% endblock css %}
   </head>
   <body>
     {% comment %} {% include "home/base/nav.html" %} {% endcomment %}
@@ -28,8 +29,8 @@
         <span>
           <a href="{% url "homes" %}">Home</a> |
           <a href="#">Contact Us</a> |
-          <a href="#">Blogs</a> |
-          <a href="#">Login</a> 
+          <a href="{% url "all_posts" %}">Posts</a> |
+          <a href="{% url "the_login" %}">Login</a> 
         </span>
       </section>
     </header>
