--- a/templates/auth/registation.html
+++ b/templates/auth/registation.html
@@ -4,7 +4,6 @@
 {% block css %}
 
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
-
 {% endblock css %}
 
 {% block favi %}
@@ -14,180 +13,6 @@
 
 
 {% block content %}
-
-
-
-{% for message in messages %}
-
-<style>
-
-
-    @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
-
-    :root {
-      --bg-clr: #262434;
-      --white: #fff;
-      --text-primary-clr: #282c36;
-      --text-secondary-clr: black;
-      --success-clr: #35d39d;
-      --success-bg-clr: #e4fcf3;
-      --info-clr: #00d0ea;
-      --info-bg-clr: #e5fafd;
-      --warning-clr: #ffc12e;
-      --warning-bg-clr: #fff9ea;
-      --error-clr: #ef4d61;
-      --error-bg-clr: #fdedef;
-    }
-    
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Open Sans", sans-serif;
-    }
-    
-
-    .alert_wrapper .alert_item {
-      max-width: 400px;
-      width: 100%;
-      background: var(--white);
-      margin-bottom: 25px;
-      padding: 15px 20px;
-      border-radius: 3px;
-      display: flex;
-      align-items: center;
-      box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
-    }
-    
-    .alert_wrapper .alert_item .text {
-      padding: 0 5px 0 15px;
-      width: calc(100% - 64px);
-    }
-    
-    .alert_wrapper .alert_item .text h3 {
-      font-size: 14px;
-      margin-bottom: 5px;
-      color: var(--text-primary-clr);
-    }
-    
-    .alert_wrapper .alert_item .text p {
-      color: var(--text-secondary-clr);
-    }
-    
-    .alert_wrapper .alert_item .icon,
-    .alert_wrapper .alert_item .close {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-    }
-    
-    .alert_wrapper .alert_item .icon ion-icon {
-      color: var(--white);
-      font-size: 18px;
-    }
-    
-    .alert_wrapper .alert_item .close {
-      font-size: 20px;
-      color: var(--text-secondary-clr);
-    }
-    
-    .alert_wrapper .alert_item .close ion-icon {
-      cursor: pointer;
-      transition: all 0.5s ease;
-    }
-    
-    .alert_wrapper .alert_item.success_item {
-      background: var(--success-bg-clr);
-    }
-    
-    .alert_wrapper .alert_item.success_item .icon {
-      background: var(--success-clr);
-    }
-    
-    .alert_wrapper .alert_item.info_item {
-      background: var(--info-bg-clr);
-    }
-    
-    .alert_wrapper .alert_item.info_item .icon {
-      background: var(--info-clr);
-    }
-    
-    .alert_wrapper .alert_item.warning_item {
-      background: var(--warning-bg-clr);
-    }
-    
-    .alert_wrapper .alert_item.warning_item .icon {
-      background: var(--warning-clr);
-    }
-    
-    .alert_wrapper .alert_item.error_item {
-      background: var(--error-bg-clr);
-    }
-    
-    .alert_wrapper .alert_item.error_item .icon {
-      background: var(--error-clr);
-    }
-    
-    .alert_wrapper .alert_item.success_item .close ion-icon:hover {
-      color: var(--success-clr);
-    }
-    
-    .alert_wrapper .alert_item.info_item .close ion-icon:hover {
-      color: var(--info-clr);
-    }
-    
-    .alert_wrapper .alert_item.warning_item .close ion-icon:hover {
-      color: var(--warning-clr);
-    }
-    
-    .alert_wrapper .alert_item.error_item .close ion-icon:hover {
-      color: var(--error-clr);
-    }
-    
-    .alert_wrapper.alert_wrapper_2 .alert_item {
-      border-radius: 50px;
-    }
-    
-    .alert_wrapper.alert_wrapper_3 .alert_item.success_item {
-      border: 2px solid var(--success-clr);
-    }
-    
-    .alert_wrapper.alert_wrapper_3 .alert_item.info_item {
-      border: 2px solid var(--info-clr);
-    }
-    
-    .alert_wrapper.alert_wrapper_3 .alert_item.warning_item {
-      border: 2px solid var(--warning-clr);
-    }
-    
-    .alert_wrapper.alert_wrapper_3 .alert_item.error_item {
-      border: 2px solid var(--error-clr);
-    }
-    
-
-
-</style>
-
-
-<div class="alert_wrapper alert_wrapper_3" >
-    <div class="alert_item success_item" >
-      <div class="icon">
-        <ion-icon name="information"></ion-icon>
-      </div>
-      <div class="text" style="color : black;">
-        <h3>NOTICE!</h3>
-        <p>{{message}}</p>
-      </div>
-      <div class="close">
-        <a href="{% url 'homes' %}"><ion-icon name="close"></ion-icon></a>
-      </div>
-    </div>
-</div>
-  
-{% endfor %}
 
 <div class="container">
   <div class="box">
@@ -216,7 +41,7 @@
 </div>
 
 
-
 {% endblock content %}
 
-
+{% block js %}
+{% endblock js %}
