--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,129 +1,169 @@
-{% extends 'base2.html' %}
+{% extends "admin/base/base.html" %}
 {% load static %}
-{% block title %}Dashboard{% endblock title %}
-{% block favi %}
-<link type="image/png" sizes="256x256" rel="icon" href="{% static 'image/dashboard.ico' %}">
-{% endblock favi %}
+{% block title %}Main{% endblock title %}
+{% block css %}
 
-
+{% endblock css %}
 
 {% block content %}
 
+<main>
+    <h1>Analytics</h1>
 
-
-<div class="p-4">
-    <div class="welcome">
-      <div class="content rounded-3 p-3">
-        <h1 class="fs-3">Welcome To BlogVerse User Dashboard</h1>
-        <p class="mb-0">Hey {{profile.user.username}}, welcome to your dashboard area!</p>
-      </div>
+    <div class="analyse">
+        <div class="sales">
+            <div class="status">
+                <div class="info">
+                    <h3>Total Posts</h3>
+                    <h1>{{posts}}</h1>
+                </div>
+                <div class="progresss">
+                                              
+                    <img src="{% static "image/posts1.svg" %}" alt="">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="visits">
+            <div class="status">
+                <div class="info">
+                    <h3>Total Views</h3>
+                    <h1>{{views}}</h1>
+                </div>
+                <div class="progresss">
+                    <img src="{% static "image/views.svg" %}" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="searches">
+            <div class="status">
+                <div class="info">
+                    <h3>Total Likes</h3>
+                    <h1>{{likes}}</h1>
+                </div>
+                <div class="progresss">
+                    <img src="{% static "image/likes.svg" %}" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
+    <div class="recent-orders">
+        <h2>Most Viewed Posts</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Post Title</th>
+                    <th>Category</th>
+                    <th>Views</th>
+                    <th>Likes</th>
+                    <th></th>
+                </tr>
 
-    <section class="statistics mt-4">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="box d-flex rounded-2 align-items-center mb-4 mb-lg-0 p-3">
-            <i class="uil-envelope-shield fs-2 text-center bg-primary rounded-circle"></i>
-            <div class="ms-3">
-              <div class="d-flex align-items-center">
-                <h3 class="mb-0">0</h3> <span class="d-block ms-2">MailBox Messages</span>
-              </div>
-              <p class="fs-normal mb-0">Check If You Missed Any Info.</p>
+            </thead>
+            <tbody>
+                {% for row in most_viewed %}
+                <tr>
+                    <td>{{row.title|truncatechars:":100"}}</td>
+                    <td>{{row.category}}</td>
+                    <td>{{row.views}}</td>
+                    <td>{{row.likes}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        
+    </div>
+    <!-- End of Recent Orders -->
+
+</main>
+
+<div class="right-section">
+    <div class="nav">
+        <button id="menu-btn">
+            <span class="material-icons-sharp">
+                menu
+            </span>
+        </button>
+
+        <div class="profile">
+            <div class="info">
+                <p>Hey, <b>{{user}}</b></p>
+                <small class="text-muted">User</small>
             </div>
-          </div>
+            <div class="profile-photo">
+                <img src="{{user.profile.profile_picture.url}}">
+            </div>
         </div>
-        <div class="col-lg-4">
-          <div class="box d-flex rounded-2 align-items-center mb-4 mb-lg-0 p-3">
-            <i class="uil-file fs-2 text-center bg-danger rounded-circle"></i>
-            <div class="ms-3">
-              <div class="d-flex align-items-center">
-                <h3 class="mb-0">{{profile.ttl_pst}}</h3> <span class="d-block ms-2">Total Posts</span>
-              </div>
-              <p class="fs-normal mb-0">You can navigate to your posts.</p>
-            </div>
-          </div>
+
+    </div>
+    <!-- End of Nav -->
+
+    <div class="user-profile">
+        <div class="logo">
+            <img src="{% static "image/blogverse.png" %}">
+            <h2>BlogVerse</h2>
+            <p>Sneak to the reality</p>
         </div>
-        <div class="col-lg-4">
-          <div class="box d-flex rounded-2 align-items-center p-3">
-            <i class="uil-users-alt fs-2 text-center bg-success rounded-circle"></i>
-            <div class="ms-3">
-              <div class="d-flex align-items-center">
-                <h3 class="mb-0">0</h3> <span class="d-block ms-2">Followers</span>
-              </div>
-              <p class="fs-normal mb-0">Follow & followed by you.</p>
-            </div>
-          </div>
+    </div>
+
+    <div class="reminders">
+        <div class="header">
+            <h2>Reminders</h2>
+            <span class="material-icons-sharp">
+                notifications_none
+            </span>
         </div>
-      </div>
-    </section>
 
-
-    <section class="statis mt-4 text-center">
-        <div class="row">
-          <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-            <div class="box bg-primary p-3">
-              <i class="uil-eye"></i>
-              <h3>{{profile.t_v}}</h3>
-              <p class="lead">Total views</p>
+        <div class="notification">
+            <div class="icon">
+                <span class="material-icons-sharp">
+                    volume_up
+                </span>
             </div>
-          </div>
-    
-          <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-            <div class="box bg-warning p-3">
-              <i class="uil-comments"></i>
-              <h3>0</h3>
-              <p class="lead">Total Comments</p>
+            <div class="content">
+                <div class="info">
+                    <h3>Time for next post</h3>
+                    <small class="text_muted">
+                        10:00 AM - 11:00 PM
+                    </small>
+                </div>
+                <span class="material-icons-sharp">
+                    more_vert
+                </span>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="box bg-success p-3">
-              <i class="uil-thumbs-up"></i>
-              <h3>{{profile.t_lk}}</h3>
-              <p class="lead">Total Likes</p>
-            </div>
-          </div>
-    
-          <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-            <div class="box bg-danger p-3">
-              <i class="uil-thumbs-down"></i>
-              <h3>{{profile.ttl_dslk}}</h3>
-              <p class="lead">Total Dislikes</p>
-            </div>
-          </div>
         </div>
-      </section>
 
-
-<br>
-      {% if user.is_authenticated %}
-      {% for message in messages %}
-      
-      <div class="alert alert-primary alert-dismissible fade show mt-4" role="alert">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col">
-              <span class="alert-icon"><i class="fas fa-info-circle"></i></span>
+        <div class="notification deactive">
+            <div class="icon">
+                <span class="material-icons-sharp">
+                    edit
+                </span>
             </div>
-            <div class="col-lg-10">
-              <div class="alert-content">
-                <strong>Attention:</strong> {{message}}
-              </div>
+            <div class="content">
+                <div class="info">
+                    <h3>Next Topic</h3>
+                    <small class="text_muted">
+                        05:00 AM - 08:00 PM
+                    </small>
+                </div>
+                <span class="material-icons-sharp">
+                    more_vert
+                </span>
             </div>
-            <div class="col">
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-          </div>
         </div>
-      </div>
-      
-      {% endfor %}
-      {% endif %}
-       
 
+        <div class="notification add-reminder">
+            <div>
+                <span class="material-icons-sharp">
+                    add
+                </span>
+                <h3>Add Reminder</h3>
+            </div>
+        </div>
 
+    </div>
+
+</div>
 
 {% endblock content %}
-
-
-
