--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -1,6 +1,6 @@
 {% extends "admin/base/base.html" %}
 {% load static %}
-{% block title %}Change Password{% endblock title %}
+{% block title %}Profile{% endblock title %}
 {% block css %}
 
 {% endblock css %}
