--- a/templates/admin/base/base.html
+++ b/templates/admin/base/base.html
@@ -7,10 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/dashboard.css" %}">
+    <link rel="stylesheet" href="{% static "css/popup.css" %}">
+    {% block css %}{% endblock css %}
     <title>{% block title %}{% endblock title %} | Dashboard</title>
 </head>
 
 <body>
+
+    {% if messages %}
+    {% for message in messages %}  
+    <div id="popup-message" class="popup hidden">
+      <span class="close-btn" onclick="closePopup()">&times;</span>
+      <div class="popup-content">
+        {% comment %} <i class="icon">&#10004;</i> {% endcomment %}
+        <div class="text-content">
+          <strong>Note!</strong>
+          <p>Message</p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+    {% endif %}
 
     <div class="container">
 
@@ -28,19 +45,19 @@
             </div>
 
             <div class="sidebar">
-                <a href="#" class="active">
+                <a href="{% url "dashboard" %}" class="{% if request.path == '/dashboard/' %}active{% endif %}">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="{% url "option" 'create' %}" class="{% if request.path == '/dashboard/create/' %}active{% endif %}">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Create Posts</h3>
                 </a>
-                <a href="#">
+                <a href="{% url "option" 'read' %}" class="{% if request.path == '/dashboard/read/' %}active{% endif %}">
                     <span class="material-icons-sharp">
                         receipt_long
                     </span>
@@ -78,11 +95,70 @@
 
         </aside>
 
-        {% block content %}{% endblock content %}
-
+        <main>
+            <h1>Dashboard</h1>
+        
+            {% block content %}{% endblock content %}
+        </main>
+        
+        <div class="right-section">
+            <div class="nav">
+                <button id="menu-btn">
+                    <span class="material-icons-sharp">
+                        menu
+                    </span>
+                </button>
+        
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey, <b>{{user}}</b></p>
+                        <small class="text-muted">User</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="{{user.profile.profile_picture.url}}">
+                    </div>
+                </div>
+        
+            </div>
+            <!-- End of Nav -->
+        
+            <div class="user-profile">
+                <div class="logo">
+                    <img src="{% static "image/blogverse.png" %}">
+                    <h2>BlogVerse</h2>
+                    <p>Sneak to the reality</p>
+                </div>
+            </div>
+        
+            <div class="reminders">
+                <div class="header">
+                    <h2>Time</h2>
+                    <span class="material-icons-sharp">
+                        clock
+                    </span>
+                </div>
+        
+                <div class="notification">
+                    <div class="icon">
+                        <span class="material-icons-sharp">
+                            volume_up
+                        </span>
+                    </div>
+                    <div class="content">
+                        <div class="info">
+                            <h2>11:05:20</h2>                    
+                        </div>
+                    </div>
+                </div>
+        
+        
+            </div>
+        
+        </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="{% static "js/index.js" %}"></script>
+    {% include "auth/popup.html" %}
 </body>
 
 </html>
