--- a/templates/admin/update_post.html
+++ b/templates/admin/update_post.html
@@ -2,9 +2,17 @@
 {% load static %}
 {% block title %}Update Post{% endblock title %}
 {% block css %}
-
+<link rel="stylesheet" href="{% static "css/form.css" %}">
 {% endblock css %}
 
 {% block content %}
-
+<main>
+    <h1>Update your post</h1>
+    <form action="" method="POST" enctype="multipart/form-data" novalidate>
+        {% csrf_token %}
+        {{form.media}}
+        {% include "form.html" %}
+        <button type="submit" class="btn"> Save </button>
+    </form>
+</main>
 {% endblock content %}
